[JA](./CHANGELOG.ja) | EN

# CHANGELOG

## v1.0.6

- Allow database deployment with zero or more readers.
- Allow database deployment from snapshot Id.
- Upgrade to SST 2.42.0.

## v1.0.5

- Bug fixes when creating a new deployment with replica enabled
- Update documentation regarding dev env.

## v1.0.4

- Package dependency updates
- Fix the usage of Amazon Aurora READ replica
- Update documentation regarding database replica

## v1.0.3

- Ensure REDCap database settings update when S3 IAM user is updated/changed

## v1.0.2

- Package dependency updates
- README updates to deploy on AWS Route 53 with subdomains.

## v1.0.1

- Add support to deploy REDCap instances in `Amazon ECS on AWS Fargate` as an alternative to AWS App Runner. This is for users that require REDCap to execute user request that are longer than 120 seconds.

### Upgrade procedure to v1.0.1

This **ONLY** applies if you have deployed any previous version and you are using the automatically created AWS App Runner Custom Link Domain. e.g you have deployed with the stage settings `hostInRoute53: true,` and  `domain: '<your_redcap_domain>'` and you access your REDCap installation with your own domain name.

In this case, this project will have deployed an `A Record` in your Route 53 Hosted Zone that needs to be replaced and managed by CDK. The procedure is the following:

1. Run `yarn install` to install package updates.
2. In you `stages.ts` file, comment or delete your `domain: <your_redcap_domain>` and enter a different email/value for `email: <your_email>`
3. Deploy the v1.0.1 release
4. Revert the `stages.ts` changes (add your domain and previous email)
5. Deploy again to complete the changes

**Important:** These steps will cause disruption in your linked custom domain and new email notifications.

## v1.0.0

- Add new stack that deploys a temporary EC2 instance for large REDCap requests / workloads.
- Refactor IAM auth for RDS on CDK.
- Database authentication uses IAM as default.