@@ -7,6 +7,7 @@ JP | [EN](./CHANGELOG)
 - データベースは 0 個以上のリーダーを使用して展開できます。
 - データベースのデプロイはスナップショット ID から行うことができます。
 - SST 2.42.0 にアップグレードします。
+- データベースの初期設定が常に実行される問題を修正しました。
 
 ## v1.0.5
 
